# MCSkinApp

./: .gitignore  CMakeLists.txt  README.md  project_brief.md
DatasetCore/: CMakeLists.txt  DatasetManager.cpp  DatasetManager.h
MCSKinApp/: AnnotationWindow.cpp  AnnotationWindow.h  AnnotationWindow.ui  CMakeLists.txt  GalleryWindow.cpp  GalleryWindow.h  GalleryWindow.ui  ImageCropperLabel.cpp  ImageCropperLabel.h  MCSkinApp.cpp  MCSkinApp.h  MCSkinApp.qrc  MCSkinApp.ui
MCSkinApp/: AnnotationWindow.cpp  AnnotationWindow.h  CMakeLists.txt  GalleryWindow.cpp  GalleryWindow.h  ImageCropperLabel.cpp  ImageCropperLabel.h  MCSkinApp.cpp  MCSkinApp.h  MCSkinApp.ui  main.cpp
